# t3-uwu

./: .gitignore  Cargo.toml  NOTICE  README.md  t3-uwu.example.toml  uwu-vibe.example.toml
src/: actions.rs  codex.rs  config.rs  controls.rs  hardware.rs  main.rs  rgb.rs  t3.rs  target.rs
