[package]
name = "t3-uwu"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
description = "Use a Wooting UwU as a layered T3 Code agent controller"
repository = "https://github.com/devteapot/t3-uwu"
readme = "README.md"
keywords = ["wooting", "uwu", "t3-code", "macropad", "hid"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
dirs = "6.0"
hidapi = "2.6"
keyring = "4.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "gzip", "json", "rustls"] }
rpassword = "7.5"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[profile.release]
lto = "thin"
strip = true
