[package]
name = "uwu-vibe"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
description = "Use a Wooting UwU as a modal T3 Code and Codex agent controller"
repository = "https://github.com/devteapot/uwu-vibe"
readme = "README.md"
keywords = ["wooting", "uwu", "t3-code", "codex", "macropad"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
dirs = "6.0"
hidapi = { version = "2.6", default-features = false, features = ["linux-native-basic-udev"] }
keyring = "4.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "gzip", "json", "rustls"] }
rpassword = "7.5"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[profile.release]
lto = "thin"
strip = true
